[package]
name = "cosmo_invaders"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Tosta <jctosta86@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jctosta/cosmo_invaders"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
